# e20-4yp-On-Chip-Online-Learning-For-Neuromorphic-Hardware

./: .gitignore  CMakeLists.txt  README.md  best_models.csv  implementation_plan.md  snn_accelerator_requirements.md  test_init.cpp  test_sim.cpp  wget-log
.cache/clangd/index/: arbiter.h.7168A17069ED650E.idx  crossover.h.75BF798718D90317.idx  environment.h.FB37080274C9F1FE.idx  evolution_unit.h.A4D89F4C50823154.idx  fixed_point.h.7111D92518BA29E4.idx  genotype.h.3D7A1D029B6D7D9E.idx  main.cpp.C918785A25C8CAF9.idx  memory_cluster.h.EF37D2092122F37D.idx  mnist_environment.h.C9ED7B518D066F78.idx  mnist_loader.h.23DE492B5569F980.idx  mnist_main.cpp.3C1FB6DE075525D8.idx  mnist_system.h.5BF418E5F50CC0B1.idx  module.cpp.95F8295B29C6675A.idx  module.h.A0BE897EE4DC8DC5.idx  mutator.h.657805B0B19F4914.idx  neuron_lif.h.7E3AE5B0DC4C39E2.idx  noc_mesh.h.C5AF7E86F4346F0D.idx  nomad_system.h.C66C83C43A5C2BA1.idx  prng.h.FA1682FCD64C30A2.idx  router.h.0BFA61402869CDDC.idx  signal.h.3B2E62D4F6423B38.idx  spike_packet.h.61773D945D322A7D.idx  synapse.h.6AAC2B781E183297.idx  test_evolution.cpp.CC6342CF2F4B355A.idx  test_fixed_point.cpp.1041C834558F07E7.idx  test_integration.cpp.5EEC3A5791B71122.idx  test_mnist.cpp.601B1CDA7F229599.idx  test_prng.cpp.63465AD838D6AC14.idx  (+2 more)
code/: README.md
code/global_inc/: README.md
code/scripts/: README.md
code/software_simulation/eons_cpp/: CMakeLists.txt
code/software_simulation/eons_cpp/include/core/: fixed_point.h  module.h
code/software_simulation/eons_cpp/include/evo/: crossover.h  mutator.h  prng.h  tournament_selector.h
code/software_simulation/eons_cpp/include/neuro/: neuron_lif.h  synapse.h
code/software_simulation/eons_cpp/include/noc/: arbiter.h  router.h
code/software_simulation/eons_cpp/include/system/: nomad_system.h
code/software_simulation/eons_cpp/tests/: test_evolution.cpp  test_fixed_point.cpp  test_integration.cpp  test_router.cpp  test_signal.cpp
docs/: README.md  changed_done.md  parameters_explained.md
docs/data/: index.json
include/core/: signal.h
include/env/: environment.h  mnist_environment.h  mnist_loader.h
include/evo/: evolution_unit.h  genotype.h
include/memory/: memory_cluster.h
include/neuro/: spike_packet.h
include/noc/: noc_mesh.h
include/system/: mnist_system.h
sim/: main.cpp  mnist_main.cpp
src/core/: module.cpp
tests/: test_mnist.cpp  test_neuron.cpp  test_prng.cpp
(+94 files in other folders)
